[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Mykyta Kasianenko <mka@empat.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
python-socketio = "^5.11.4"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
